--- a/projects/portfolio/src/Components/Dont4Git/Dont4Git.css
+++ b/projects/portfolio/src/Components/Dont4Git/Dont4Git.css
@@ -1,57 +1,58 @@
-.whoiscontainer {
+.dontcontainer {
   width: 80%;
   height: 100%;
   display: flex;
+  flex-direction: row;
   margin: 0 auto;
   margin-top: 40px;
 }
 
-.whoiscontainer p {
+.donttitle {
+  margin: 0px;
+  margin-top: 5%;
+}
+
+.dontcontainer p {
   line-height: 25px;
   letter-spacing: 0.1px;
 }
-.title {
-  margin: 0;
-  margin-top: 4%;
-}
-.whoisleft {
+
+.dontleft {
   width: 40%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
 }
-.whoisright {
+
+.dontleft a {
+  color: black;
+  text-decoration: none;
+  width: 100%;
+  border-bottom: 1px solid black;
+}
+
+.dontright {
   width: 60%;
   height: 100%;
 }
 
-.whoisimg {
+.dontimg {
   width: 100%;
   height: auto;
 }
 
-.whoislink {
-  text-decoration: none;
-  color: black;
-  border-bottom: 1px solid black;
-}
-
 @media only screen and (min-width: 1100px) {
-  .whoiscontainer {
+  .dontcontainer {
     width: 65%;
   }
 }
 
 @media screen and (max-width: 550px) {
-  .whoiscontainer {
-    margin-top: 20px;
+  .dontcontainer {
     text-align: center;
     width: 100%;
     flex-direction: column;
     align-items: center;
   }
-  .whoisright {
+  .dontright {
     width: 90%;
   }
 }
