--- a/projects/portfolio/src/Components/Doro/Doro.css
+++ b/projects/portfolio/src/Components/Doro/Doro.css
@@ -1,57 +1,60 @@
-.whoiscontainer {
+.dorocontainer {
   width: 80%;
   height: 100%;
   display: flex;
   margin: 0 auto;
   margin-top: 40px;
 }
+.dorotitle {
+  margin: 0px;
+  margin-top: 4%;
+}
 
-.whoiscontainer p {
+.dorocontainer p {
   line-height: 25px;
   letter-spacing: 0.1px;
 }
-.title {
-  margin: 0;
-  margin-top: 4%;
-}
-.whoisleft {
+
+.doroleft {
   width: 40%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
-.whoisright {
+
+.doroleft a {
+  color: black;
+  text-decoration: none;
+  width: 100%;
+  border-bottom: 1px solid black;
+}
+
+.dororight {
   width: 60%;
   height: 100%;
 }
 
-.whoisimg {
+.doroimg {
   width: 100%;
   height: auto;
 }
 
-.whoislink {
-  text-decoration: none;
-  color: black;
-  border-bottom: 1px solid black;
-}
-
 @media only screen and (min-width: 1100px) {
-  .whoiscontainer {
+  .dorocontainer {
     width: 65%;
   }
 }
 
 @media screen and (max-width: 550px) {
-  .whoiscontainer {
-    margin-top: 20px;
+  .dorocontainer {
     text-align: center;
-    width: 100%;
+    width: 90%;
     flex-direction: column;
     align-items: center;
   }
-  .whoisright {
+
+  .dororight {
     width: 90%;
   }
 }
